# MeerkatVM

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  fac.disasm  grammar.txt
lib/argparser/: CMakeLists.txt  argparser.cpp  argparser.h
lib/asm/: CMakeLists.txt  asm.h  asm_cmd.h  asm_reg.h  assembler.h
lib/stack/: _stack_interface.h  stack.h
output/: bin.txt  listing.txt
resources/: aplusb.txt  factorial.txt  program.txt  quad.txt  result.asm
src/asm/: CMakeLists.txt  asm_config.cpp  asm_config.h  asm_flags.cpp  asm_flags.h  asm_parser.cpp  asm_parser.h  asm_utils.cpp  asm_utils.h  main.cpp
src/disasm/: CMakeLists.txt  disasm_config.cpp  disasm_config.h  disasm_flags.cpp  disasm_flags.h  disasm_utils.cpp  disasm_utils.h  main.cpp
src/vcpu/: CMakeLists.txt  TODO.md  main.cpp  vcpu_utils.cpp  vcpu_utils.h
src/virtual_machine/: CMakeLists.txt  main.cpp  vm_utils.cpp  vm_utils.h
